# montreal_collision_prediction

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
src/com/api/: main.py
src/com/api/dtos/: predict_dto.py
src/com/api/routers/: linear_regression.py
src/com/misc/: collision_workflow.yxmd
src/com/models/: base_model.py  logistic_regression_model.py  main.py  tensorflow_sequential.py  trainer.py  xg_boost_model.py
src/com/models/saved_models/logisticregressionmodel/: model_pkl
src/com/models/saved_models/tensorflowsequentialmodel/: scaler
src/com/models/utils/: load_data.py  select_model.py
src/com/notebooks/: data_wrangling_visualizations.ipynb  models.ipynb
